src/Base/main/default/objects/Rest_Service_Log__c/Rest_Service_Log__c.object-meta.xml
<CustomObject>
    <label>Rest Service Log</label>
    <nameField>
        <displayFormat>SL-{000000000}</displayFormat>
        <label>Service Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rest Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>