src/Base/main/default/objects/Rest_Service_Log__c/fields/Parent_Service_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Service_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Service Log</label>
    <referenceTo>Rest_Service_Log__c</referenceTo>
    <relationshipLabel>Rest Service Logs</relationshipLabel>
    <relationshipName>Rest_Service_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>