src/Base/main/default/objects/Rest_Service_Log__c/fields/Request_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Request_Encrypted__c</fullName>
    <label>Request Encrypted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>