src/Base/main/default/objects/Rest_Service_Log__c/fields/Request_URI__c.field-meta.xml
<CustomField>
    <fullName>Request_URI__c</fullName>
    <label>Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>