src/Base/main/default/objects/Rest_Service_Log__c/fields/Response_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Response_Encrypted__c</fullName>
    <label>Response Encrypted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>