src/Base/main/default/objects/Rest_Service_Log__c/recordTypes/Ecwid_Inbound.recordType-meta.xml
<RecordType>
    <fullName>Ecwid_Inbound</fullName>
    <active>true</active>
    <label>Ecwid Inbound</label>
</RecordType>