src/Base/main/default/objects/Rest_Service_Log__c/recordTypes/Ecwid_Outbound.recordType-meta.xml
<RecordType>
    <fullName>Ecwid_Outbound</fullName>
    <active>true</active>
    <label>Ecwid Outbound</label>
</RecordType>