src/Base/main/default/objects/Rest_Service_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>